--- a/public/service.html
+++ b/public/service.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    service
+    <ul>
+        <li>create bots from discord</li>
+    </ul>
 </body>
 </html>
